--- a/roadmapCV.html
+++ b/roadmapCV.html
@@ -28,7 +28,7 @@
     <h4>SAP Full Stack Developer | Infosys Limited<br>
     July 2021 - Present</h4>
     <ul>
-        <li>Developed and maintained SAP Fiori applications using SAP UI5 framework, enhancing user experience and
+        <li>Developed , maintained SAP Fiori applications using SAP UI5 framework, enhancing user experience and
             functionality.</li>
         <li>Collaborated with cross-functional teams to gather requirements, design solutions, and implement features
             in line with business needs.</li>
